--- a/Android Call Recorder/bin/AndroidManifest.xml
+++ b/Android Call Recorder/bin/AndroidManifest.xml
@@ -1,11 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.call.recorder"
-    android:versionCode="6"
-    android:versionName="1.1.1">
+    android:versionCode="7"
+    android:versionName="1.1.2">
 
     <uses-sdk
-        android:minSdkVersion="7"
-        android:targetSdkVersion="15" />
+        android:minSdkVersion="7" />
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
