--- a/Android Call Recorder/bin/AndroidManifest.xml
+++ b/Android Call Recorder/bin/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.call.recorder"
-    android:versionCode="9"
+    android:versionCode="10"
     android:versionName="1.3">
 
     <uses-sdk
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     
     <application
         android:icon="@drawable/ic_launcher"
