--- a/Android Call Recorder/AndroidManifest.xml
+++ b/Android Call Recorder/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.call.recorder"
-    android:versionCode="19"
-    android:versionName="1.3.9">
+    android:versionCode="24"
+    android:versionName="2.0.3">
 
     <uses-sdk
         android:targetSdkVersion="7" android:minSdkVersion="7" />
@@ -21,7 +21,7 @@
         android:launchMode="singleInstance"
         android:taskAffinity=""
         android:excludeFromRecents="false"
-        android:debuggable="true">
+        android:debuggable="false">
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
