Code re-factoring to use Constants and FileHelper Validations added to avoid starting or stopping recorder when not required Adjusted cleanup functionality to properly dispose recorder Moved target API to 10 Added label to indicate possible issue with existing recorder

--- a/Android Call Recorder/AndroidManifest.xml
+++ b/Android Call Recorder/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:launchMode="singleInstance"
         android:taskAffinity=""
         android:excludeFromRecents="false"
-        android:debuggable="false">
+        android:allowBackup="false">
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
