Namespace changed to comply with the rules of forking from F-Droid Adjusted functionality to start service on call start, and finish on call end even if recording is not enabled If recording was enabled, recording should have started with service If recording was disabled, call information is maintained to allow start recording during call Adjusted service notification to start main activity if available when call ends Fixed issue with numbers containing invalid characters like asterisk, plus or minus sign

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,46 +1,53 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.call.recorder"
+    package="com.callrecorder.android"
     android:versionCode="25"
-    android:versionName="2.0.5">
+    android:versionName="2.0.5" >
 
     <uses-sdk
-        android:targetSdkVersion="7" android:minSdkVersion="7" />
+        android:minSdkVersion="7"
+        android:targetSdkVersion="7" />
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    
+
     <application
+        android:allowBackup="false"
+        android:excludeFromRecents="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" 
         android:launchMode="singleInstance"
         android:taskAffinity=""
-        android:excludeFromRecents="false"
-        android:allowBackup="false">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainScreen" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-       
-        <receiver android:name=".MyPhoneReciever">
+
+        <receiver android:name=".MyPhoneReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE" />
                 <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
             </intent-filter>
         </receiver>
+
         <service android:name=".RecordService" />
-        <activity android:name=".TermsActivity" android:label="@string/title_activity_main"/>
+
+        <activity
+            android:name=".TermsActivity"
+            android:label="@string/title_activity_main" />
     </application>
 
 </manifest>
